# JPEG-decoder

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  decoder.cpp  fft.cpp  huffman.cpp  input.h  jpeg.h  jpg_to_png.cpp  jpg_to_png.hpp  main.cpp  reader.h
